--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -6,12 +6,68 @@
 // app styles
 @import "_theme";
 
+* {
+  font-size: 24px;
+
+}
+
 html, body {
   width: 100%;
   height: 100%;
+
+}
+h1 {
+  margin: 0;
+}
+div {
+  float: right;
 }
 
 body {
-  background-color: $app-default;
+  background-image: url('./assets/main-background.jpeg');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
+p {
+  margin: 0;
+}
+a:link, a:visited {
+  color: $app-dark;
+  &:hover {
+    color: rgb(58, 137, 142);
+  }
+}
+
+.logo {
+  width: 100%;
+  margin-top: 25%;
+  padding-left: 15px;
+  background-color: rgba(#ffffff, 0.5);
+  box-shadow: 1px 1px 16px 12px rgba(#ffffff, 0.5);
+
+}
+.logoText {
+  width: 50%;
+  font-size: 36px;
+  color: black;
+  margin-top: 10px;
+  margin-bottom: 10px;
+
+  & h1 {
+    margin-bottom: 10px;
+  }
+  & span {
+    font-size: 36px;
+    font-weight: 100;
+  }
+  & .right-span {
+    margin-left: -10px;
+  }
+}
+.contactBtns i {
+  font-size: 100px;
+}
+.contactBtns {
+  width: 50%;
+}
